[gd_scene load_steps=17 format=3 uid="uid://myan6vgkdhut"]

[ext_resource type="Script" path="res://level.gd" id="1_j1rmr"]
[ext_resource type="PackedScene" uid="uid://cbc2w772kohqx" path="res://scenes/moving_platform.tscn" id="2_s8iqc"]
[ext_resource type="Texture2D" uid="uid://bx7xy6fspojjg" path="res://assets/Seasonal Tilesets/1 - Grassland/Terrain (16 x 16).png" id="3_7s318"]
[ext_resource type="Texture2D" uid="uid://0xvk8oxs64tm" path="res://assets/Seasonal Tilesets/1 - Grassland/Grassland_entities (16 x 16).png" id="4_8yn8m"]
[ext_resource type="Script" path="res://gun.gd" id="5_fmp44"]
[ext_resource type="Texture2D" uid="uid://bymq4nmepw0b4" path="res://assets/Mini FX, Items & UI/Food Items/Ice_Cream_Cones (16 x 16).png" id="6_4npf8"]
[ext_resource type="Script" path="res://gun2.gd" id="7_4nhrc"]
[ext_resource type="PackedScene" uid="uid://csdtlhv63jllu" path="res://player.tscn" id="8_cgufk"]
[ext_resource type="PackedScene" uid="uid://c2itu6o6kd8ha" path="res://cactus.tscn" id="9_sh4cm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k5j24"]
texture = ExtResource("3_7s318")
3:1/next_alternative_id = 3
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/1 = 1
3:1/1/flip_v = true
3:1/1/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/1/physics_layer_0/angular_velocity = 0.0
3:1/1/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/next_alternative_id = 4
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/1 = 1
4:1/1/flip_v = true
4:1/1/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/1/physics_layer_0/angular_velocity = 0.0
4:1/1/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/2 = 2
4:1/2/transpose = true
4:1/2/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/2/physics_layer_0/angular_velocity = 0.0
4:1/2/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/3 = 3
4:1/3/flip_h = true
4:1/3/transpose = true
4:1/3/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/3/physics_layer_0/angular_velocity = 0.0
4:1/3/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/next_alternative_id = 2
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/1 = 1
5:1/1/flip_v = true
5:1/1/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/1/physics_layer_0/angular_velocity = 0.0
5:1/1/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:1/0 = 0
11:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:1/0/physics_layer_0/angular_velocity = 0.0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:2/0 = 0
11:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:2/0/physics_layer_0/angular_velocity = 0.0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/next_alternative_id = 3
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/1 = 1
5:3/1/flip_v = true
5:3/1/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/1/physics_layer_0/angular_velocity = 0.0
5:3/1/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/2 = 2
5:3/2/flip_h = true
5:3/2/flip_v = true
5:3/2/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/2/physics_layer_0/angular_velocity = 0.0
5:3/2/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/next_alternative_id = 3
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/1 = 1
9:3/1/flip_v = true
9:3/1/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/1/physics_layer_0/angular_velocity = 0.0
9:3/1/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/2 = 2
9:3/2/flip_h = true
9:3/2/flip_v = true
9:3/2/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/2/physics_layer_0/angular_velocity = 0.0
9:3/2/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/next_alternative_id = 3
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/1 = 1
10:3/1/flip_v = true
10:3/1/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/1/physics_layer_0/angular_velocity = 0.0
10:3/1/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:3/0 = 0
11:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:3/0/physics_layer_0/angular_velocity = 0.0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:3/0 = 0
12:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:3/0/physics_layer_0/angular_velocity = 0.0
12:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:3/0 = 0
13:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:3/0/physics_layer_0/angular_velocity = 0.0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:3/0 = 0
15:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:3/0/physics_layer_0/angular_velocity = 0.0
15:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:4/0 = 0
11:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:4/0/physics_layer_0/angular_velocity = 0.0
11:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:5/0 = 0
11:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:5/0/physics_layer_0/angular_velocity = 0.0
11:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/next_alternative_id = 3
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/1 = 1
3:6/1/flip_v = true
3:6/1/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/1/physics_layer_0/angular_velocity = 0.0
3:6/1/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/2 = 2
3:6/2/flip_h = true
3:6/2/flip_v = true
3:6/2/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/2/physics_layer_0/angular_velocity = 0.0
3:6/2/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:8/0 = 0
4:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:8/0/physics_layer_0/angular_velocity = 0.0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i2c5w"]
texture = ExtResource("4_8yn8m")
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
10:1/0 = 0
10:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:1/0/physics_layer_0/angular_velocity = 0.0
11:1/0 = 0
11:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:1/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0 = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
10:2/0 = 0
10:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:2/0/physics_layer_0/angular_velocity = 0.0
11:2/0 = 0
11:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:2/0/physics_layer_0/angular_velocity = 0.0
15:2/0 = 0
15:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:2/0/physics_layer_0/angular_velocity = 0.0
16:2/0 = 0
16:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:2/0/physics_layer_0/angular_velocity = 0.0
17:2/0 = 0
17:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:2/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
11:3/0 = 0
11:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:3/0/physics_layer_0/angular_velocity = 0.0
14:4/0 = 0
14:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:4/0/physics_layer_0/angular_velocity = 0.0
15:4/0 = 0
15:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:4/0/physics_layer_0/angular_velocity = 0.0
16:4/0 = 0
16:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:4/0/physics_layer_0/angular_velocity = 0.0
17:4/0 = 0
17:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:4/0/physics_layer_0/angular_velocity = 0.0
18:4/0 = 0
18:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:4/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
9:5/0 = 0
9:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:5/0/physics_layer_0/angular_velocity = 0.0
10:5/0 = 0
10:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:5/0/physics_layer_0/angular_velocity = 0.0
11:5/0 = 0
11:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:5/0/physics_layer_0/angular_velocity = 0.0
12:5/0 = 0
12:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:5/0/physics_layer_0/angular_velocity = 0.0
14:5/0 = 0
14:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:5/0/physics_layer_0/angular_velocity = 0.0
16:5/0 = 0
16:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:5/0/physics_layer_0/angular_velocity = 0.0
18:5/0 = 0
18:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:5/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_1d1vq"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 7
sources/0 = SubResource("TileSetAtlasSource_k5j24")
sources/1 = SubResource("TileSetAtlasSource_i2c5w")

[sub_resource type="AtlasTexture" id="AtlasTexture_1rvhv"]
atlas = ExtResource("6_4npf8")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jxkg1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rvhv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lb5de"]
atlas = ExtResource("6_4npf8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_reyyw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lb5de")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="World" type="Node2D"]
script = ExtResource("1_j1rmr")

[node name="moving_platform" parent="." instance=ExtResource("2_s8iqc")]
position = Vector2(0, 192)

[node name="moving_platform2" parent="." instance=ExtResource("2_s8iqc")]
position = Vector2(360, 32)
rotation = 3.14159
distance = 142
move_horizontal = false

[node name="moving_platform3" parent="." instance=ExtResource("2_s8iqc")]
position = Vector2(312, 336)
distance = 142
move_horizontal = false

[node name="moving_platform4" parent="." instance=ExtResource("2_s8iqc")]
position = Vector2(672, 192)
scale = Vector2(-1, 1)

[node name="level" type="TileMap" parent="."]
light_mask = 2
tile_set = SubResource("TileSet_1d1vq")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(1179648, 327680, 4, 1, 262144, 3, 2, 262144, 3, 3, 262144, 3, 4, 262144, 3, 5, 262144, 3, 6, 262144, 3, 7, 262144, 3, 8, 327680, 65539, 9, 262144, 65537, 10, 262144, 65537, 11, 262144, 65537, 12, 262144, 65537, 13, 262144, 65537, 14, 262144, 65537, 15, 262144, 65537, 16, 262144, 65537, 17, 327680, 131075, 18, 327680, 2, 23, 196608, 2, 24, 327680, 65539, 25, 262144, 65537, 26, 262144, 65537, 27, 262144, 65537, 28, 262144, 65537, 29, 262144, 65537, 30, 262144, 65537, 31, 262144, 65537, 32, 262144, 65537, 33, 327680, 131075, 34, 262144, 3, 35, 262144, 3, 36, 262144, 3, 37, 262144, 3, 38, 262144, 3, 39, 262144, 3, 917504, 196608, 131078, 983040, 327680, 5, 1048576, 327680, 5, 1114112, 327680, 3, 0, 262144, 3, 65536, 262144, 3, 131072, 262144, 3, 196608, 262144, 3, 262144, 327680, 65539, 327680, 327680, 2, 393216, 327680, 2, 458752, 327680, 2, 524288, 327680, 2, 589824, 327680, 2, 655360, 327680, 2, 720896, 327680, 6, 589851, 262144, 6, 589852, 262144, 6, 589853, 262144, 6, 589854, 262144, 6, 589855, 262144, 6, 589856, 262144, 6, 524315, 262144, 1, 524316, 262144, 1, 524317, 262144, 1, 524318, 262144, 1, 524319, 262144, 1, 524320, 262144, 1, 524321, 327680, 1, 524314, 196608, 1, 589850, 196608, 6, 589857, 327680, 6, 393222, 786432, 3, 393223, 786432, 3, 393224, 851968, 3, 393221, 589824, 3, 1245184, 327680, 4, 1310720, 327680, 4, 1441792, 262144, 3, 1376256, 327680, 4, 1441793, 262144, 4, 1441794, 262144, 4, 1441795, 262144, 4, 1441796, 262144, 3, 1441797, 327680, 3, 1441798, 262144, 1, 1441799, 262144, 1, 1441800, 262144, 1, 1441801, 262144, 1, 1441802, 262144, 1, 1441803, 262144, 1, 1441804, 262144, 1, 1441805, 262144, 1, 1441806, 262144, 1, 1441807, 262144, 1, 1441808, 262144, 1, 1441809, 196608, 3, 1441810, 327680, 2, 1441815, 196608, 2, 1441816, 327680, 3, 1441817, 262144, 1, 1441818, 262144, 1, 1441819, 262144, 1, 1441820, 262144, 1, 1441821, 262144, 1, 1441822, 262144, 1, 1441823, 262144, 1, 1441824, 262144, 1, 1441825, 262144, 1, 1441826, 262144, 1, 1441827, 262144, 1, 1441828, 262144, 3, 1441829, 262144, 3, 1441830, 262144, 3, 1441831, 262144, 3, 1441832, 262144, 3, 1441833, 262144, 3, 1376297, 262144, 3, 1310761, 262144, 3, 1245225, 262144, 3, 1179689, 262144, 3, 1114153, 196608, 3, 1048617, 196608, 5, 983081, 196608, 5, 917545, 196608, 65542, 720937, 196608, 6, 655401, 196608, 5, 589865, 196608, 5, 524329, 196608, 5, 40, 262144, 3, 41, 262144, 3, 65577, 262144, 3, 131113, 262144, 3, 196649, 262144, 3, 262185, 327680, 131075, 327721, 196608, 5, 393257, 196608, 5, 458793, 196608, 5, 1376257, 262144, 4, 1376258, 262144, 4, 1376259, 327680, 3, 1310721, 262144, 4, 1310722, 327680, 3, 1245185, 327680, 3, 1179649, 327680, 2, 1376260, 262144, 1, 1376261, 458752, 3, 1245186, 458752, 3, 1310723, 458752, 3, 1114152, 196608, 1, 1179688, 196608, 2, 1245224, 196608, 3, 1245223, 196608, 1, 1310759, 196608, 3, 1376295, 262144, 4, 1376296, 262144, 4, 1310760, 262144, 4, 1310758, 196608, 1, 1376294, 196608, 3, 1376293, 393216, 3, 1376292, 196608, 1, 262145, 327680, 65537, 196610, 262144, 65537, 196611, 262144, 65537, 131075, 327680, 65539, 131076, 262144, 65537, 131077, 327680, 65537, 65541, 327680, 65539, 65542, 262144, 65537, 65543, 262144, 65537, 65544, 327680, 65537, 65540, 262144, 3, 65539, 262144, 3, 65538, 262144, 3, 65537, 262144, 3, 131073, 262144, 3, 196609, 327680, 65539, 131074, 262144, 3, 262184, 196608, 65537, 196647, 262144, 65537, 196646, 196608, 65537, 131109, 262144, 65537, 131108, 196608, 65537, 65571, 262144, 65537, 65570, 262144, 65537, 65569, 196608, 65537, 65572, 327680, 131075, 65573, 262144, 3, 65574, 262144, 3, 131110, 327680, 131075, 131111, 262144, 3, 131112, 262144, 3, 65576, 262144, 3, 65575, 262144, 3, 196648, 327680, 131075, 1376273, 196608, 2, 1310737, 196608, 2, 1245201, 196608, 2, 1179665, 196608, 2, 1114129, 196608, 2, 1048593, 196608, 2, 983057, 196608, 1, 1376280, 327680, 2, 1310744, 327680, 2, 1245208, 327680, 2, 1179672, 327680, 2, 1114136, 327680, 2, 1048600, 327680, 2, 983064, 327680, 1, 1376274, 327680, 2, 1310738, 327680, 2, 1245202, 327680, 2, 1179666, 327680, 2, 1114130, 327680, 2, 1048594, 327680, 2, 983058, 327680, 1, 1376279, 196608, 2, 1310743, 196608, 2, 1245207, 196608, 2, 1179671, 196608, 2, 1114135, 196608, 2, 1048599, 196608, 2, 983063, 196608, 1, 1114113, 458752, 3, 65560, 327680, 2, 131096, 327680, 2, 196632, 327680, 65539, 262168, 327680, 2, 327704, 327680, 2, 393240, 327680, 65537, 65553, 196608, 2, 131089, 196608, 2, 196625, 327680, 131075, 262161, 196608, 2, 327697, 196608, 2, 393233, 196608, 65537, 65554, 327680, 2, 131090, 327680, 2, 196626, 327680, 2, 262162, 327680, 2, 327698, 327680, 2, 393234, 327680, 65537, 65559, 196608, 2, 131095, 196608, 2, 196631, 196608, 2, 262167, 196608, 2, 327703, 196608, 2, 393239, 196608, 65537, 1245197, 458752, 4, 1179661, 327680, 1, 1245194, 65536, 4, 1179658, 196608, 1, 1179659, 262144, 1, 1179660, 262144, 1, 1245195, 262144, 6, 1245196, 262144, 6, 1245212, 262144, 6, 1245213, 262144, 6, 1245214, 458752, 4, 1245211, 65536, 4, 1179675, 196608, 1, 1179678, 327680, 1, 1179676, 262144, 1, 1179677, 262144, 1, 196624, 589824, 65539, 196633, 589824, 131075)

[node name="gun" type="Node2D" parent="."]
position = Vector2(136, 80)
script = ExtResource("5_fmp44")

[node name="lock" type="Marker2D" parent="gun"]
position = Vector2(21, -1)
scale = Vector2(0.25, 0.25)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="gun"]
position = Vector2(20, -1)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_jxkg1")

[node name="gun2" type="Node2D" parent="."]
position = Vector2(371, 114)
script = ExtResource("7_4nhrc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="gun2"]
position = Vector2(20, -1)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_reyyw")

[node name="lock" type="Marker2D" parent="gun2"]
position = Vector2(26, -1)
scale = Vector2(0.25, 0.25)

[node name="player" parent="." instance=ExtResource("8_cgufk")]
position = Vector2(104, 67)

[node name="player2" parent="." instance=ExtResource("8_cgufk")]
position = Vector2(537, 73)

[node name="timer" type="Timer" parent="."]

[node name="cactus" parent="." instance=ExtResource("9_sh4cm")]
position = Vector2(464, 353)

[node name="cactus2" parent="." instance=ExtResource("9_sh4cm")]
position = Vector2(192, 352)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(304, 155)
limit_left = 0
limit_top = 0

[connection signal="round_ended" from="." to="." method="_on_round_ended"]
[connection signal="is_dead" from="player" to="." method="_on_player_is_dead"]
[connection signal="is_dead" from="player2" to="." method="_on_player_2_is_dead"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
